fix for coins icons on mobile

--- a/burnthestate.css
+++ b/burnthestate.css
@@ -352,7 +352,7 @@ mark
 
 .coins
 {
-	width: 70px;
+	width: 70%;
 	margin-right: 7px;
 	padding-top: 15px;
 }
